@@ -1,9 +1,14 @@
 package main.characterclass;
 
-import java.util.Arrays;
+import main.abilities.Abilities;
+import main.abilities.AbilitiesType;
+
+import java.util.List;
 
 public class Support extends CharacterClass {
     public Support() {
-        super(75, 5, 10, Arrays.asList("Heal", "Shield", "Bless"));
+        super(75, 5, 10, List.of(
+                new Abilities("Heal", AbilitiesType.HEAL, 0, 30, 0),
+                new Abilities("Shield", AbilitiesType.DEFEND, 0, 0, 15)));
     }
 }
